--- a/styles.css
+++ b/styles.css
@@ -97,8 +97,8 @@
 }
 
 .view-cart-bg {
-    animation: pulse 1.5s ease infinite;
-    background: #FFCB2F;
+    animation: pulse 2s ease infinite;
+    background: #DC3545;
 }
 
 
@@ -107,7 +107,7 @@
       transform: scale(1, 1);
     }
     50% {
-      opacity: 0.3;
+      opacity: 0.2;
     }
     100% {
       transform: scale(1.3);
@@ -116,7 +116,7 @@
   }
   
 .view-cart:hover {
-    background-color: #ffd65b !important;
+    background-color: #db707a !important;
 }
 .page-footer {
     background-color: #4e4e4e;
@@ -193,6 +193,10 @@ body {
 .form-check {
     margin: auto;
     text-align: left;
+}
+
+.form-select {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e")
 }
  
 .warning {
